feat(runtime): Use large memory pages and Z garbage collector