@@ -173,7 +173,8 @@ function start {
     -ea -Dnoebug
     -XX:+UnlockExperimentalVMOptions
     -XX:+AlwaysPreTouch
-    -XX:+UseParallelOldGC
+    -XX:+UseLargePages
+    -XX:+UseZGC
     --add-exports java.base/jdk.internal.math=io.questdb
     "
 
